; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_nv04.c_nv04_graph_mthd_bind_class.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_nv04.c_nv04_graph_mthd_bind_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nouveau_instmem = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*, i32*, i32)* @nv04_graph_mthd_bind_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nv04_graph_mthd_bind_class(%struct.nouveau_object* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.nouveau_object*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nouveau_instmem*, align 8
  %8 = alloca i32, align 4
  store %struct.nouveau_object* %0, %struct.nouveau_object** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.nouveau_object*, %struct.nouveau_object** %4, align 8
  %10 = call %struct.nouveau_instmem* @nouveau_instmem(%struct.nouveau_object* %9)
  store %struct.nouveau_instmem* %10, %struct.nouveau_instmem** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %11, align 4
  %13 = shl i32 %12, 4
  store i32 %13, i32* %8, align 4
  %14 = load %struct.nouveau_instmem*, %struct.nouveau_instmem** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @nv_ro32(%struct.nouveau_instmem* %14, i32 %15)
  ret i32 %16
}

declare dso_local %struct.nouveau_instmem* @nouveau_instmem(%struct.nouveau_object*) #1

declare dso_local i32 @nv_ro32(%struct.nouveau_instmem*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
